--- a/dclass_application/templates/_class_list.html
+++ b/dclass_application/templates/_class_list.html
@@ -2,20 +2,23 @@
     <a href="{% url 'class' cl.id %}">
         <div class="class_result_content">
             <ul>
-                <li>
-                    <h2>
-                        {{ cl.class_name }}
-                        <span class='teacher_name'>{{ cl.teacher }}先生</span>                        
-                    </h2>
+                <li class="class_result_title">
+                    <h2>{{ cl.class_name }}</h2>
+                    {% comment %} <p class='teacher_name'>{{ cl.teacher }}</p> {% endcomment %}
                 </li>
                 <li>
-                    <p class="tag">{{ cl.year }}年</p>
+                    <p class="class_a_average_evaluation">A率 <span class="score">{{cl.get_round_a_ratio}}%</span></p>
+                    <p class="class_a_average_evaluation">評定平均 <span class="score">{{cl.average_evaluation}}</span></p> 
+                </li>
+                <li>
+                    {% if cl.place == "今出川" %}
+                        <p class="tag imadegawa_tag">{{ cl.place }}</p>
+                    {% else %}
+                        <p class="tag kyoutanabe_tag">{{ cl.place }}</p>
+                    {% endif %}
+                    <p class="tag faculty_tag">{{ cl.get_short_faculty }}</p>
                     <p class="tag">{{ cl.term }}</p>
-                    <p class="tag">{{ cl.place}}</p>
                 </li>
-                <li>
-                    <p class="class_a_average_evaluation">A率 {{cl.get_round_a_ratio}}%</p>
-                    <p class="class_a_average_evaluation">評定平均 {{cl.average_evaluation}}</p> 
                 <li>
                     <p><i class="fas fa-heart fa-fw my-pink"></i>{{ cl.favorite }}</p>
                     <p><i class="far fa-comment fa-fw"></i>{{cl.comment_num}}</p>
