--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/_log.css' %}">
+{% endblock css %}
+
 {% block main %}
 <div class="wrapper">
     <div class="log_form">
