--- a/dclass_application/templates/add_comment.html
+++ b/dclass_application/templates/add_comment.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/add_comment.css' %}">
+{% endblock css %}
 
 {% block main %}
     <div class="wrapper">
